--- a/css/content.css
+++ b/css/content.css
@@ -53,7 +53,7 @@
     background-color: #F5F5F5;
     border-radius: .2rem;
     color: #AA0000;
-    font-family: 'Latin Modern Mono', Courier, monospace;
+    font-family: 'Fira Code','Monaco','Consolas', Courier, monospace;
     padding: 0 .2rem;
 }
 
@@ -97,7 +97,7 @@
 .content pre {
     background-color: #F5F5F5!important;
     border-radius: .2rem;
-    font-family: 'Latin Modern Mono', Courier, monospace;
+    font-family: 'Fira Code','Monaco','Consolas', Courier, monospace;
     margin-top: .5rem;
     overflow-x: auto;
     padding: .5rem;
