--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,1 @@
-#wrapper {
-    font-family: 'Latin Modern Roman', 'Times New Roman', 'Noto Serif SC', serif;
-}
+#wrapper{font-family:latin modern roman,times new roman,noto serif sc,serif}
